# graphQL-data

./: .gitignore
graphQL_test/: Cargo.toml
graphQL_test/src/: all_functions.rs  api_try.rs  main.rs  q.graphQL  query.rs  query_back.rs  schema.rs
